--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,12 @@
 <resources>
     <string name="app_name">Test - Auto</string>
-    <string name="test_app_ucactivity">Test APP</string>
-    <string name="btn_reset_cmp">Reset CMP</string>
-    <string name="uc_logo">Usercentrics Logo</string>
-    <string name="togglebutton">ToggleButton</string>
-    <string name="settings_id">Settings ID</string>
-    <string name="btn_full_legacy">Full CMP (Legacy)</string>
+    <string name="settings_id">RulesetId/SettingsId</string>
     <string name="btn_full">Full CMP</string>
     <string name="btn_first_bottom">First Layer Bottom</string>
     <string name="btn_first_center">First Layer Center</string>
     <string name="btn_first_sheet">First Layer Sheet</string>
     <string name="btn_second_layer">Second Layer</string>
-    <string name="txt_reencode_tcf_string">Reendoce TCF String</string>
-    <string name="txt_print_tcf_string">Print TCF String</string>
-    <string name="btn_open_webview">Open Webview</string>
+    <string name="btn_open_webview">Preview</string>
+    <string name="checkbox_ruleset">is RulesetId"</string>
+    <string name="btn_init">"Initialize SDK"</string>
 </resources>
