--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="btn_first_sheet">First Layer Sheet</string>
     <string name="btn_second_layer">Second Layer</string>
     <string name="btn_open_webview">Preview</string>
+    <string name="btn_back_from_webview">Preview</string>
     <string name="checkbox_ruleset">is RulesetId"</string>
     <string name="btn_init">"Initialize SDK"</string>
 </resources>
