UI refactor. Changes: 	- sdk version update: 2.15.1 	- layer buttons disabled when sdk not initialized 	- clear user session added
 Changes to be committed:
	new file:   .idea/compiler.xml
	new file:   .idea/deploymentTargetSelector.xml
	new file:   .idea/gradle.xml
	new file:   .idea/kotlinc.xml
	new file:   .idea/migrations.xml
	new file:   .idea/misc.xml
	new file:   .idea/vcs.xml
	modified:   app/src/main/java/eu/ruimgreis/testauto/MainActivity.kt
	modified:   app/src/main/java/eu/ruimgreis/testauto/accessibility/Accessibility.kt
	modified:   app/src/main/java/eu/ruimgreis/testauto/utils/Utils.kt
	modified:   app/src/main/res/values/strings.xml
	modified:   gradle/libs.versions.toml
	modified:   gradle/wrapper/gradle-wrapper.properties

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="btn_back_from_webview">Preview</string>
     <string name="checkbox_ruleset">is RulesetId"</string>
     <string name="btn_init">"Initialize SDK"</string>
+    <string name="btn_clear_session">"Clear User Session"</string>
 </resources>
